force-app/main/default/objects/Certification_Tracker__c/Certification_Tracker__c.object-meta.xml
<CustomObject>
    <description>This tracker contains the information required for certification tracking of a partner account.</description>
    <label>Competency Tracker</label>
    <nameField>
        <displayFormat>CT-{0000000}</displayFormat>
        <label>Competency Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competency Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>