force-app/main/default/objects/Certification_Tracker__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>Account_Name__r.Account_ID__c</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>