force-app/main/default/objects/Certification_Tracker__c/fields/Approved_Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>Approved_Business_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Approved Business Plan - Used only by APJ Certification Team</inlineHelpText>
    <label>Approved Business Plan</label>
    <type>Checkbox</type>
</CustomField>