force-app/main/default/objects/Certification_Tracker__c/fields/Back_1_QTRs_Ent_Rev__c.field-meta.xml
<CustomField>
    <fullName>Back_1_QTRs_Ent_Rev__c</fullName>
    <label>Back 1 QTRs Ent Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>