force-app/main/default/objects/Certification_Tracker__c/fields/Back_3_QTRs_Total_Rev__c.field-meta.xml
<CustomField>
    <fullName>Back_3_QTRs_Total_Rev__c</fullName>
    <label>Back 3 QTRs Total Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>