force-app/main/default/objects/Certification_Tracker__c/fields/Certification_Area_MasterProgramNames__c.field-meta.xml
<CustomField>
    <fullName>Certification_Area_MasterProgramNames__c</fullName>
    <label>Competencies MasterProgramNames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>