force-app/main/default/objects/Certification_Tracker__c/fields/Certification_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Changed_Date__c</fullName>
    <label>Competency Changed Date</label>
    <type>Date</type>
</CustomField>