force-app/main/default/objects/Certification_Tracker__c/fields/Certification_Completed__c.field-meta.xml
<CustomField>
    <fullName>Certification_Completed__c</fullName>
    <label>Competency Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>Converged Infrastructure</fullName>
            </value>
            <value>
                <fullName>Core Client</fullName>
            </value>
            <value>
                <fullName>Client Data Security</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>Cloud Client-Computing</fullName>
            </value>
            <value>
                <fullName>IT Transformation</fullName>
            </value>
            <value>
                <fullName>Digital Transformation</fullName>
            </value>
            <value>
                <fullName>Client Services Deployment</fullName>
            </value>
            <value>
                <fullName>Server Services (PowerEdge Server Deployment)</fullName>
            </value>
            <value>
                <fullName>Server Services (Modular Infrastructure Deployment)</fullName>
            </value>
            <value>
                <fullName>Storage Services (Entry Level Deployment)</fullName>
            </value>
            <value>
                <fullName>Networking Services (Campus Deployment)</fullName>
            </value>
            <value>
                <fullName>Storage Services (PS Series Deployment)</fullName>
            </value>
            <value>
                <fullName>Storage Services (SC Series Deployment)</fullName>
            </value>
            <value>
                <fullName>Networking Services (Datacenter Deployment)</fullName>
            </value>
            <value>
                <fullName>Converged Infrastructure Services</fullName>
            </value>
            <value>
                <fullName>Hybrid Cloud Services</fullName>
            </value>
            <value>
                <fullName>Data Protection Services</fullName>
            </value>
            <value>
                <fullName>Onboarding - LA English</fullName>
            </value>
            <value>
                <fullName>Onboarding - LA Portuguese</fullName>
            </value>
            <value>
                <fullName>Onboarding - LA Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>