force-app/main/default/objects/Certification_Tracker__c/fields/Competencies_meeting_Premier_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Competencies_meeting_Premier_Criteria__c</fullName>
    <label>Competencies meeting Premier Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Data Center Networking</fullName>
            </value>
            <value>
                <fullName>Cloud Client-Computing</fullName>
            </value>
            <value>
                <fullName>Cloud Solutions</fullName>
            </value>
            <value>
                <fullName>Client Solutions</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>Microsoft Platform Management</fullName>
            </value>
            <value>
                <fullName>Endpoint Management</fullName>
            </value>
            <value>
                <fullName>Network Security</fullName>
            </value>
            <value>
                <fullName>Identity and Access Management</fullName>
            </value>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>PS Series Storage Deployment</fullName>
            </value>
            <value>
                <fullName>SC Series Storage Deployment</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Big Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>EMEA-EM - Preferred Partner</fullName>
            </value>
            <value>
                <fullName>SonicWALL Enterprise Program</fullName>
            </value>
            <value>
                <fullName>Onboarding - LA English</fullName>
            </value>
            <value>
                <fullName>Onboarding - LA Portuguese</fullName>
            </value>
            <value>
                <fullName>Onboarding - LA Spanish</fullName>
            </value>
            <value>
                <fullName>Client Deployment Services Competency</fullName>
            </value>
            <value>
                <fullName>PowerEdge Servers Deployment Services Competency</fullName>
            </value>
            <value>
                <fullName>Client Data Security</fullName>
            </value>
            <value>
                <fullName>OEM Solutions</fullName>
            </value>
            <value>
                <fullName>Modular Infrastructure Deployment Services Competency</fullName>
            </value>
            <value>
                <fullName>Entry Level Storage</fullName>
            </value>
            <value>
                <fullName>Campus Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>