force-app/main/default/objects/Certification_Tracker__c/fields/Contractual_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contractual Agreement – Used only by APJ Certification Team</inlineHelpText>
    <label>Contractual Agreement</label>
    <type>Checkbox</type>
</CustomField>