force-app/main/default/objects/Certification_Tracker__c/fields/Current_QTD_Total_Rev__c.field-meta.xml
<CustomField>
    <fullName>Current_QTD_Total_Rev__c</fullName>
    <label>Current QTD Total Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>