force-app/main/default/objects/Certification_Tracker__c/fields/Current_QTR__c.field-meta.xml
<CustomField>
    <fullName>Current_QTR__c</fullName>
    <label>Current QTR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>