force-app/main/default/objects/Certification_Tracker__c/fields/Date_Qualified_as_Dell_Preferred_Partner__c.field-meta.xml
<CustomField>
    <fullName>Date_Qualified_as_Dell_Preferred_Partner__c</fullName>
    <description>Date first time the partner hits Preferred Status</description>
    <label>Date Qualified as Dell Preferred Partner</label>
    <type>Date</type>
</CustomField>