force-app/main/default/objects/Certification_Tracker__c/fields/Date_Qualified_as_Dell_Premier_Partner__c.field-meta.xml
<CustomField>
    <fullName>Date_Qualified_as_Dell_Premier_Partner__c</fullName>
    <description>Date first time the partner hits Premier Status</description>
    <label>Date Qualified as Dell Premier Partner</label>
    <type>Date</type>
</CustomField>