force-app/main/default/objects/Certification_Tracker__c/fields/De_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>De_Certification_Date__c</fullName>
    <label>De-Competency Date</label>
    <type>Date</type>
</CustomField>