force-app/main/default/objects/Certification_Tracker__c/fields/Demo_Unit_Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>Demo_Unit_Criteria_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Unit Criteria Met?</label>
    <type>Checkbox</type>
</CustomField>