force-app/main/default/objects/Certification_Tracker__c/fields/Demo_Units_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Demo_Units_Purchased__c</fullName>
    <label>Demo Units Purchased</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compellent Demo</fullName>
            </value>
            <value>
                <fullName>EQL Demo</fullName>
            </value>
            <value>
                <fullName>Kace Demo</fullName>
            </value>
            <value>
                <fullName>Networking Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>