force-app/main/default/objects/Certification_Tracker__c/fields/DemoAlert__c.field-meta.xml
<CustomField>
    <fullName>DemoAlert__c</fullName>
    <description>Competency names for which Training Criteria is completed but Demo Unit is missing. Email alert is sent for these Competency names.</description>
    <label>DemoAlert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>