force-app/main/default/objects/Certification_Tracker__c/fields/Deployment_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Certification_Date__c</fullName>
    <label>Deployment Certification Date</label>
    <type>Date</type>
</CustomField>