force-app/main/default/objects/Certification_Tracker__c/fields/Deployment_Certifications_Completed__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Certifications_Completed__c</fullName>
    <label>Services Competencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisor Deployment</fullName>
            </value>
            <value>
                <fullName>AppSync Deployment</fullName>
            </value>
            <value>
                <fullName>AppSync Support</fullName>
            </value>
            <value>
                <fullName>Atmos Deployment</fullName>
            </value>
            <value>
                <fullName>Avamar Deployment</fullName>
            </value>
            <value>
                <fullName>Avamar Support</fullName>
            </value>
            <value>
                <fullName>Azure Stack Deployment</fullName>
            </value>
            <value>
                <fullName>Campus Deployment</fullName>
            </value>
            <value>
                <fullName>Centera Support</fullName>
            </value>
            <value>
                <fullName>Client Services Deployment</fullName>
            </value>
            <value>
                <fullName>CloudBoost Deployment</fullName>
            </value>
            <value>
                <fullName>Cloud Tiering Appliance (CTA) Deployment</fullName>
            </value>
            <value>
                <fullName>Data Center Deployment</fullName>
            </value>
            <value>
                <fullName>Data Domain Deployment</fullName>
            </value>
            <value>
                <fullName>Data Domain Support</fullName>
            </value>
            <value>
                <fullName>Data Protection Suite Deployment</fullName>
            </value>
            <value>
                <fullName>Data Protection Suite Support</fullName>
            </value>
            <value>
                <fullName>Dell Storage Networking Configuration​</fullName>
            </value>
            <value>
                <fullName>Disk Library for Mainframe Deployment</fullName>
            </value>
            <value>
                <fullName>Disk Library for Mainframe Support</fullName>
            </value>
            <value>
                <fullName>DSSD Deployment</fullName>
            </value>
            <value>
                <fullName>DSSD Support</fullName>
            </value>
            <value>
                <fullName>Elastic Cloud Storage (ECS) Deployment</fullName>
            </value>
            <value>
                <fullName>Elastic Cloud Storage (ECS) Support</fullName>
            </value>
            <value>
                <fullName>Entry-Level Deployment</fullName>
            </value>
            <value>
                <fullName>Intelligent Data Mobility Deployment</fullName>
            </value>
            <value>
                <fullName>Isilon Deployment</fullName>
            </value>
            <value>
                <fullName>Isilon Support</fullName>
            </value>
            <value>
                <fullName>Modular Infrastructure Deployment</fullName>
            </value>
            <value>
                <fullName>Networker Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>