force-app/main/default/objects/Certification_Tracker__c/fields/Evaluate_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluate Criteria</label>
    <type>Checkbox</type>
</CustomField>