force-app/main/default/objects/Certification_Tracker__c/fields/Last_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluation_Date__c</fullName>
    <label>Last Evaluation Date</label>
    <type>Date</type>
</CustomField>