force-app/main/default/objects/Certification_Tracker__c/fields/Partner_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Partner_Relationship__c</fullName>
    <formula>Account_Name__r.Partner_Relationship__c</formula>
    <label>Partner Program Tier</label>
    <type>Text</type>
</CustomField>