force-app/main/default/objects/Certification_Tracker__c/fields/Premier_Criteria_Enable__c.field-meta.xml
<CustomField>
    <fullName>Premier_Criteria_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be set to TRUE if an account has completed eight unique competencies</description>
    <label>Premier Criteria Enable</label>
    <type>Checkbox</type>
</CustomField>