force-app/main/default/objects/Certification_Tracker__c/fields/Previous_Partner_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Partner_Relationship_Type__c</fullName>
    <label>Previous Partner Relationship Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>