force-app/main/default/objects/Certification_Tracker__c/fields/QTD_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>QTD_Updated_Date__c</fullName>
    <label>QTD Updated Date</label>
    <type>Date</type>
</CustomField>