force-app/main/default/objects/Certification_Tracker__c/fields/Qualified_as_Dell_Preferred_Partner__c.field-meta.xml
<CustomField>
    <fullName>Qualified_as_Dell_Preferred_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified as Dell Preferred Partner</label>
    <type>Checkbox</type>
</CustomField>