force-app/main/default/objects/Certification_Tracker__c/fields/Rev_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Rev_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Rev External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>