force-app/main/default/objects/Certification_Tracker__c/fields/Training_Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>Training_Criteria_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Criteria Met?</label>
    <type>Checkbox</type>
</CustomField>