force-app/main/default/objects/Certification_Tracker__c/validationRules/Dell_Partner_Preferred_Premier_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Dell_Partner_Preferred_Premier_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Qualified_as_Dell_Preferred_Partner__c = true  &amp;&amp;  Qualified_as_Dell_Premier_Partner__c = true,true,false)</errorConditionFormula>
    <errorMessage>You can&apos;t choose both Qualified as Dell Preferred Partner and Qualified as Dell Premier Partner together . Check only one of the checkbox.</errorMessage>
</ValidationRule>