force-app/main/default/objects/Certification_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Name__c</columns>
    <columns>Account_Id__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Partner_Relationship__c</columns>
    <columns>Training_Criteria_Met__c</columns>
    <columns>Demo_Unit_Criteria_Met__c</columns>
    <columns>Current_QTD_Ent_Rev__c</columns>
    <columns>Current_QTD_Total_Rev__c</columns>
    <columns>Certification_Date__c</columns>
    <columns>Audit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>